# kaggle_template

./: README.md  cookiecutter.json  multiple_run.sh
shell/: make_github_key_and_set_email.sh.sh  multiple_run.sh  set_kaggle_api.sh
{{cookiecutter.competition_name}}/: .gitignore  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.competition_name}}/baseline_template/nlp/classification/: deberta.ipynb  deberta_mis.ipynb
{{cookiecutter.competition_name}}/baseline_template/table/: lgb_classification_polars.ipynb
{{cookiecutter.competition_name}}/env_file/: enf.default
{{cookiecutter.competition_name}}/shell/: download_competition_data.sh  git_first_push.sh  make_github_key_and_set_email.sh  make_github_key_and_set_email.sh.sh  setting_shell.sh
